# flickr8k-explorer

./: .gitignore  DESIGN.md  README.md  pyproject.toml
backend/: ingest.py
backend/app/: api.py  config.py  db.py  embeddings.py  models.py  repository.py  services.py
backend/tests/: conftest.py  test_api.py  test_vector_index.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
frontend/src/components/: DetailPanel.tsx  ImageGrid.tsx  ProjectionMap.tsx  SearchBar.tsx  Spinner.tsx  StatsPanel.tsx
